# CCBlade

./: README.md  admin.sh  meson.build  pyproject.toml  setup.py
ccblade/: __init__.py  airfoilprep.py  bem.py  ccblade.py  ccblade_component.py
ccblade/core/: airfoil.py  bem.py  ccblade.py
ccblade/utils/: airfoilprep.py
docs/: conf.py
docs/examples/: example.py  precurve.py
docs/exts/: numfig.py
docs/scripts/: custom-fix.py  latex-fix.py
examples/: example_basic.py  example_precurve.py
src/ccblade/: __init__.py  airfoilprep.py  ccblade.py  ccblade_component.py
src/ccblade/airfoil/: airfoil.py  ccairfoil.py  polar.py
src/ccblade/cli/: main.py
src/ccblade/components/: ccblade_component.py
src/ccblade/core/: bem.py  ccblade.py  datamodels.py
src/ccblade/utils/: csystem.py
src/ccblite/: __init__.py
src/ccblite/airfoil/: polar.py
src/ccblite/cli/: main.py
src/ccblite/core/: bem.py  datamodels.py  plotting.py
test/: test_airfoilprep.py  test_ccblade.py  test_om_gradients.py
tests/: test_airfoilprep.py  test_ccblade.py
